MD5 and SHA algorithms

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,13 @@ hash.argon2.hashLength=128
 hash.argon2.parallelism=1
 hash.argon2.memory=1024
 hash.argon2.iterations=9
-hash.scrypt.cpuCost=
-hash.scrypt.memoryCost=
-hash.scrypt.parallelization=
-hash.scrypt.keyLength=
-hash.scrypt.saltLength=
-hash.pbkd2.secret=
-hash.pbkd2.saltLength=
-hash.pbkd2.iterations=
-hash.pbkd2.secretKeyFactoryAlgorithm=
+hash.scrypt.cpuCost=20480
+hash.scrypt.memoryCost=9
+hash.scrypt.parallelization=1
+hash.scrypt.keyLength=128
+hash.scrypt.saltLength=64
+hash.pbkd2.secret=randomSecret
+hash.pbkd2.saltLength=64
+hash.pbkd2.iterations=10
+# PBKDF2WithHmacSHA1 | PBKDF2WithHmacSHA256 | PBKDF2WithHmacSHA512
+hash.pbkd2.secretKeyFactoryAlgorithm=PBKDF2WithHmacSHA512
