--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ hash.pbkd2.saltLength=64
 hash.pbkd2.iterations=10
 # PBKDF2WithHmacSHA1 | PBKDF2WithHmacSHA256 | PBKDF2WithHmacSHA512
 hash.pbkd2.secretKeyFactoryAlgorithm=PBKDF2WithHmacSHA512
+hash.blake3.key=superSecretHashKeyWLength32bytes
