--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 hash.bcrypt.strength=9
-hash.argon2.saltLength=64
-hash.argon2.hashLength=128
+hash.argon2.salt-length=64
+hash.argon2.hash-length=128
 hash.argon2.parallelism=1
 hash.argon2.memory=1024
 hash.argon2.iterations=9
-hash.scrypt.cpuCost=20480
-hash.scrypt.memoryCost=9
+hash.scrypt.cpu-cost=1024
+hash.scrypt.memory-cost=16
 hash.scrypt.parallelization=1
-hash.scrypt.keyLength=128
-hash.scrypt.saltLength=64
-hash.pbkd2.secret=randomSecret
-hash.pbkd2.saltLength=64
-hash.pbkd2.iterations=10
+hash.scrypt.key-length=128
+hash.scrypt.salt-length=64
+hash.pbkdf2.secret=randomSecret
+hash.pbkdf2.salt-length=64
+hash.pbkdf2.iterations=10
 # PBKDF2WithHmacSHA1 | PBKDF2WithHmacSHA256 | PBKDF2WithHmacSHA512
-hash.pbkd2.secretKeyFactoryAlgorithm=PBKDF2WithHmacSHA512
+hash.pbkdf2.secret-key-factory-algorithm=PBKDF2WithHmacSHA512
 hash.blake3.key=superSecretHashKeyWLength32bytes
