--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ hash.pbkdf2.iterations=10
 # PBKDF2WithHmacSHA1 | PBKDF2WithHmacSHA256 | PBKDF2WithHmacSHA512
 hash.pbkdf2.secret-key-factory-algorithm=PBKDF2WithHmacSHA512
 hash.blake3.key=superSecretHashKeyWLength32bytes
+hash.blake2bp.key=superSecretHashingWLength32bytes
+hash.blake2sp.key=ultraSecretHashKeyWLength32bytes
+hash.skein.output-size=512
+hash.skein.block-size=1024
+# ESCH256 | ESCH384
+hash.sparkle.param=ESCH256
