--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,40 @@
 hash.bcrypt.strength=9
+
 hash.argon2.salt-length=64
 hash.argon2.hash-length=128
 hash.argon2.parallelism=1
 hash.argon2.memory=1024
 hash.argon2.iterations=9
+
 hash.scrypt.cpu-cost=1024
 hash.scrypt.memory-cost=16
 hash.scrypt.parallelization=1
 hash.scrypt.key-length=128
 hash.scrypt.salt-length=64
+
 hash.pbkdf2.secret=randomSecret
 hash.pbkdf2.salt-length=64
 hash.pbkdf2.iterations=10
 # PBKDF2WithHmacSHA1 | PBKDF2WithHmacSHA256 | PBKDF2WithHmacSHA512
 hash.pbkdf2.secret-key-factory-algorithm=PBKDF2WithHmacSHA512
+
 hash.blake3.key=superSecretHashKeyWLength32bytes
+
 hash.blake2bp.key=superSecretHashingWLength32bytes
+
 hash.blake2sp.key=ultraSecretHashKeyWLength32bytes
+
 hash.skein.output-size=512
 hash.skein.block-size=1024
+
 # ESCH256 | ESCH384
 hash.sparkle.param=ESCH256
+
+# 128 | 256
+hash.cshake.bit-strength=256
+
+# AsconHash | AsconHashA
+hash.ascon.algorithm=AsconHashA
+
+# 256 | 384 | 512
+hash.dstu7564.hash-size=512
