--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+# 1 to 10
 hash.bcrypt.strength=9
 
 hash.argon2.salt-length=64
 hash.argon2.hash-length=128
+# 1 to 16.777.215
 hash.argon2.parallelism=1
+# Power of 2 value
 hash.argon2.memory=1024
 hash.argon2.iterations=9
 
@@ -18,10 +21,11 @@ hash.pbkdf2.iterations=10
 # PBKDF2WithHmacSHA1 | PBKDF2WithHmacSHA256 | PBKDF2WithHmacSHA512
 hash.pbkdf2.secret-key-factory-algorithm=PBKDF2WithHmacSHA512
 
+# 32 bytes
 hash.blake3.key=superSecretHashKeyWLength32bytes
-
+# 32 bytes
 hash.blake2bp.key=superSecretHashingWLength32bytes
-
+# 32 bytes
 hash.blake2sp.key=ultraSecretHashKeyWLength32bytes
 
 hash.skein.output-size=512
