--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -62,16 +62,26 @@
 #   accessed directly. (example: "foo.example.com,bar.example.com")
 #
 ###
-FROM registry.access.redhat.com/ubi9/openjdk-21:1.22
+FROM quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-21 AS build
+
+WORKDIR /app
+
+COPY pom.xml /app
+COPY src /app/src
+COPY .mvn /app/.mvn
+COPY mvnw /app
+
+RUN ./mvnw package
+###################################################################
+FROM registry.access.redhat.com/ubi9/openjdk-21:1.22 AS runtime
 
 ENV LANGUAGE='en_US:en'
 
-
 # We make four distinct layers so if there are application changes the library layers can be re-used
-COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
-COPY --chown=185 target/quarkus-app/*.jar /deployments/
-COPY --chown=185 target/quarkus-app/app/ /deployments/app/
-COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
+COPY --from=build --chown=185 app/target/quarkus-app/lib/ /deployments/lib/
+COPY --from=build --chown=185 app/target/quarkus-app/*.jar /deployments/
+COPY --from=build --chown=185 app/target/quarkus-app/app/ /deployments/app/
+COPY --from=build --chown=185 app/target/quarkus-app/quarkus/ /deployments/quarkus/
 
 EXPOSE 8080
 USER 185
